add section business

--- a/index.html
+++ b/index.html
@@ -46,9 +46,25 @@
     <section class="business">
         <div class="container">
             <div class="business-inner">
-                <div class="business-inform"></div>
-                <iframe src="https://youtu.be/evN1YwKLcwY" frameborder="0"></iframe>
-               
+                <div class="business-inform">
+                    <h1 class="business-title">
+                        Take your business to the next level take out
+                    </h1>
+                    <p class="business-text">
+                        Nullam laoreet nec turpis et ultrices. Duis sit amet quam arcu. Nam
+                        facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem
+                        pulvinar
+                    </p>
+                    <a href="#" target="_blank" class="business-link">Learn more</a>
+
+
+                </div>
+                <iframe width="592" height="334" src="https://www.youtube.com/embed/sW0EENhO07g"
+                    title="YouTube video player"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen>
+                </iframe>
+
             </div>
         </div>
     </section>
