--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                         facilisis lacinia ex, eget sollicitudin massa pellentesque in. Vivamus mattis eros at sem
                         pulvinar
                     </p>
-                    <a href="#" target="_blank" class="business-link">Learn more</a>
-
+                    <a href="#" target="_blank" class="business-link">Learn more
+                    </a>
 
                 </div>
                 <iframe width="592" height="334" src="https://www.youtube.com/embed/sW0EENhO07g"
@@ -65,6 +65,79 @@
                     allowfullscreen>
                 </iframe>
 
+            </div>
+        </div>
+    </section>
+
+    <section class="support">
+        <div class="container">
+            <div class="support-inner">
+                <h2 class="support-title">
+                    How can we help you?
+                </h2>
+                <ul class="support-list">
+                    <li class="support-item">
+                        <h3 class="support-name">
+                            Web Designer
+                        </h3>
+                        <p class="support-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim Ut enim ad minim veniam, quis
+                        </p>
+                        <a href="#" class="support-link">
+                            View more
+                        </a>
+                    </li>
+                    <li class="support-item">
+                        <h3 class="support-name">
+                            SMM
+                        </h3>
+                        <p class="support-text">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        </p>
+                        <a href="#" class="support-link">
+                            View more
+                        </a>
+                    </li>
+                    <li class="support-item">
+                        <h3 class="support-name">
+                            Branding
+                        </h3>
+                        <p class="support-text">
+                            No the other hand, we denounce with righteous indignation and dislike men who are so
+                            beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that
+                            they cannot foresee
+                        </p>
+                        <a href="#" class="support-link">
+                            View more
+                        </a>
+                    </li>
+                    <li class="support-item">
+                        <h3 class="support-name">
+                            Developer
+                        </h3>
+                        <p class="support-text">
+                            Which is the same as saying through shrinking from toil and pain. These cases are perfectly
+                            simple and easy to distinguish. In a free hour, when our
+                        </p>
+                        <a href="#" class="support-link">
+                            View more
+                        </a>
+                    </li>
+                    <li class="support-item">
+                        <h3 class="support-name">
+                            Graphic design
+                        </h3>
+                        <p class="support-text">
+                            But in certain circumstances and owing to the claims of duty or the obligations of business
+                            it will frequently occur that pleasures have to be repudiated and annoyances accepted
+                        </p>
+                        <a href="#" class="support-link">
+                            View more
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
