--- a/imtixon-4/index.html
+++ b/imtixon-4/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <title>Product</title>
 </head>
+
 <body>
-    
+    <header class="site-haeder">
+        <div class="container">
+            <nav class="navbar">
+                <ol class="list">
+                    <li class="item">
+                        <a href="./registation.html" class="link">REGISTER </a>
+                    </li>
+                    <li class="item">
+                        <a href="./registation.html" class="link">NEW USER</a>
+                    </li>
+                </ol>
+            </nav>
+        </div>
+    </header>
+    <script src="js/main.js"></script>
 </body>
+
 </html>
