--- a/imtixon-4/index.html
+++ b/imtixon-4/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Product</title>
 </head>
 
@@ -13,17 +16,38 @@
     <header class="site-haeder">
         <div class="container">
             <nav class="navbar">
+                <a href="/index.html" class="link logo">
+                    <img src="images/shopping-cart-osnmdfg.png" alt="" class="log-img" width="25px">
+                    Xurmo
+                </a>
                 <ol class="list">
+
                     <li class="item">
-                        <a href="./registation.html" class="link">REGISTER </a>
+                        <a href="./registation.html" class="link">REGISTER</a>
                     </li>
                     <li class="item">
                         <a href="./registation.html" class="link">NEW USER</a>
+                    </li>
+                    <li class="item">
+                        <a href="tel:+998880363003" class=" link tel" target="_blank">
+                            <i class="fas fa-phone"></i>
+                            998880363003
+                        </a>
+                    </li>
+                    <li class="item">
+                        <a href="https://goo.gl/maps/FGvLeDAdijpo1ZW88" class="link location" target="_blank">
+                            <i class="fas fa-map-marker "></i> OUR LOCATION
+                        </a>
                     </li>
                 </ol>
             </nav>
         </div>
     </header>
+    <main class="main">
+        <div class="container market-container">
+            
+        </div>
+    </main>
     <script src="js/main.js"></script>
 </body>
 
