--- a/imtixon-4/registation.html
+++ b/imtixon-4/registation.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,38 @@
     <title>Registation</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-    
-    <script src="js/main.js"></script>
+    <header class="site-header">
+        <div class="container">
+            <nav class="site-navbar">
+                <ol class="list">
+                    <li class="item item-reg"><a href="./index.html" class="link">Shopping</a></li>
+                    <li class="item item-reg"><a href="/registation.html" class="link">Registation</a></li>
+                </ol>
+            </nav>
+        </div>
+    </header>    <div class="container">
+        <form class="form">
+            <p>NEW USER</p>
+            <input type="text" placeholder="Your name " id="user-name">
+            <input type="text" placeholder="Your surname" id="user-surname">
+            <input type="text" placeholder=" Your username" id="user">
+            <input type="email" placeholder="Your email" id="user-email">
+            <input type="password" placeholder="Your password" id="user-password">
+            <input type="text" placeholder="Your Hometown" id="user-city">
+            <input type="text" placeholder="Your Street" id="user-street">
+            <input type="number" placeholder="Your phone number" id="user-phone">
+            <button type="submit" class="submit-btn">Send</button>
+        </form>
+        <form class="form-reg">
+            <p>REGISTER</p>
+            <input type="text" placeholder="Your username" class="user">
+            <input type="password" placeholder="Your password" class="user-password">
+            <button type="submit" class="btn-reg">Send</button>
+        </form>
+    </div>
+    <script src="js/app.js"></script>
 </body>
+
 </html>
