--- a/imtixon-4/index.html
+++ b/imtixon-4/index.html
@@ -23,10 +23,7 @@
                 <ol class="list">
 
                     <li class="item">
-                        <a href="./registation.html" class="link">REGISTER</a>
-                    </li>
-                    <li class="item">
-                        <a href="./registation.html" class="link">NEW USER</a>
+                        <a href="./registation.html" class="link">registration </a>
                     </li>
                     <li class="item">
                         <a href="tel:+998880363003" class=" link tel" target="_blank">
@@ -45,7 +42,7 @@
     </header>
     <main class="main">
         <div class="container market-container">
-            
+
         </div>
     </main>
     <script src="js/main.js"></script>
