--- a/imtixon-4/registation.html
+++ b/imtixon-4/registation.html
@@ -13,13 +13,14 @@
     <header class="site-header">
         <div class="container">
             <nav class="site-navbar">
-                <ol class="list">
+                <ol class="list-reg">
                     <li class="item item-reg"><a href="./index.html" class="link">Shopping</a></li>
                     <li class="item item-reg"><a href="/registation.html" class="link">Registation</a></li>
                 </ol>
             </nav>
         </div>
-    </header>    <div class="container">
+    </header>  
+      <div class="container">
         <form class="form">
             <p>NEW USER</p>
             <input type="text" placeholder="Your name " id="user-name">
